--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <body>
         <div class="container">
             <header class="header-section">
-                <h1 class="title is-2">Validador CIF</h1><br>
+                <h1 class="title is-5">Validador CIF</h1><br>
                 <p class="subtitle">
-                    Valida tu identidad (persona física/persona moral) a través de tu Cédula de Identificación Fiscal CIF
+                    ChilorioTech
                 </p>
             </header>
-
             <main class="main-content">
+                <div>
+                    Valida tu identidad (persona física/persona moral) a través de tu Cédula de Identificación Fiscal CIF
+                </div>
                 <section class="camera-section">
                     <div class="video-container">
                         <video id="video" autoplay playsinline aria-label="Vista de cámara para escaneo de código QR"></video>
