--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body>
         <div class="container">
             <header class="header-section">
-                <h1 class="title is-5">Validador CIF</h1><br>
+                <h1 class="title is-5">Chilorio Tech</h1><br>
                 <p class="subtitle">
-                    ChilorioTech
+                    Validador CIF
                 </p>
             </header>
             <main class="main-content">
@@ -43,12 +43,12 @@
 
                 <section class="result-section mt-5">
                     <div class="field">
-                        <label class="label" for="result">Resultado del Escaneo</label>
+                        <label class="label" for="result">Identidad a confirmar</label>
                         <div class="control">
                             <textarea 
                                 id="result" 
                                 class="textarea" 
-                                placeholder="El resultado del código QR aparecerá aquí..." 
+                                placeholder="la identidad del código QR aparecerá aquí..." 
                                 readonly
                                 rows="4"
                             ></textarea>
