--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <!-- Title Section -->
                     <div class="has-text-centered mb-6" style="width: 100%; max-width: 600px;">
                         <p class="is-size-5">
-                            Valida tu identidad (persona física/persona moral) a través de tu Cédula de Identificación Fiscal CIF
+                            Valida tu identidad (persona física/persona moral) a través del codigo QR de tu Cédula de Identificación Fiscal CIF o Constancia de Situacion Fiscal
                         </p>
                     </div>
 
@@ -45,19 +45,19 @@
 
                     <!-- Results Section -->
                     <section class="result-section" style="width: 100%; max-width: 600px;">
-                        <div class="field">
+                        <div class="field" id=""textAreaFieldDiv>
                             <label class="label has-text-centered" for="result">Identidad a confirmar</label>
                             <div class="control">
                                 <textarea id="result" class="textarea" placeholder="la identidad del código QR aparecerá aquí..." readonly rows="4"></textarea>
                             </div>
                         </div>
-                        <div class="field">
+                        <div class="field" id="rfcFieldDiv">
                             <label class="label has-text-centered" for="rfcField">RFC</label>
                             <div class="control has-text-centered">
                                 <input id="rfcField" class="input" type="text" maxlength="13" style="width: 8.5em;" placeholder="XAXX010101000" readonly>
                             </div>
                         </div>
-                        <div class="field">
+                        <div class="field" id="cifIdFieldDiv">
                             <label class="label has-text-centered" for="cifIdField">CIF ID</label>
                             <div class="control has-text-centered">
                                 <input id="cifIdField" class="input" type="text" maxlength="13" style="width: 8.5em;" placeholder="01234567890" readonly>
