--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                             <br>
                         </div>
-                        <div class="field" id="buttonsPanel">
+                        <div class="field" id="buttonsPanelDiv">
                             <div class="control has-text-centered">
                                 <div class="buttons is-centered">
                                     <button id="validateBtn" class="button is-success is-medium" style="width: 10em;"> Validar Identidad </button>
