--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="control has-text-centered">
                                 <div class="buttons is-centered">
                                     <button id="validateBtn" class="button is-success is-medium" style="width: 10em;"> Validar Identidad </button>
-                                    <button id="validateBtn" class="button is-danger is-medium" style="width: 10em;"> Cancelar Validacion</button>
+                                    <button id="cancelBtn" class="button is-danger is-medium" style="width: 10em;"> Cancelar Validacion</button>
                                 </div>
                             </div>
                         </div>
