--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                             </div>
                         </div>
                         <div class="field" id="rfcFieldDiv">
-                            <label class="label has-text-centered" for="rfcField">RFC</label>
+                            <label class="label has-text-centered" for="rfcFieldInput">RFC</label>
                             <div class="control has-text-centered">
-                                <input id="rfcField" class="input" type="text" maxlength="13" style="width: 8.5em;" placeholder="XAXX010101000" readonly>
+                                <input id="rfcFieldInput" class="input" type="text" maxlength="13" style="width: 10em;" placeholder="XAXX010101000" readonly>
                             </div>
                         </div>
                         <div class="field" id="cifIdFieldDiv">
-                            <label class="label has-text-centered" for="cifIdField">CIF ID</label>
+                            <label class="label has-text-centered" for="cifIdFieldInput">CIF ID</label>
                             <div class="control has-text-centered">
-                                <input id="cifIdField" class="input" type="text" maxlength="13" style="width: 8.5em;" placeholder="01234567890" readonly>
+                                <input id="cifIdFieldInput" class="input" type="text" maxlength="13" style="width: 10em;" placeholder="01234567890" readonly>
                             </div>
                             <br>
                         </div>
